New mapping for synonym

--- a/backend/tests/iga/.env-iga
+++ b/backend/tests/iga/.env-iga
@@ -1,10 +1,11 @@
-USER_DATA=tests/iga/data
+USER_DATA=tests/iga2/data
 ES_DATA=/usr/share/elasticsearch/data/extra/iga
 
 GLOSSARY_FILE=glossaire.txt
 EXPRESSION_FILE=expression.txt
 MAPPING_FILE=map.json
-NOM_INDEX=iga
+NOM_INDEX=iga2
+META_FILE=pdf/iga.xlsx
 
 PDF_DIR=pdf
 JSON_DIR=json
