--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
-
 #https://blog.bam.tech/developer-news/dockerize-your-app-and-keep-hot-reloading
+#load_module modules/ngx_http_subs_filter_module.so;
 
 server {
     listen       80;
@@ -13,16 +13,30 @@ server {
         index  index.html index.htm;
         proxy_pass http://browser-frontend-dev:3000;
         proxy_http_version 1.1;
-        #proxy_set_header Upgrade $http_upgrade;
-        #proxy_set_header Connection 'upgrade';
-        #proxy_set_header Host $host;
-        #proxy_cache_bypass $http_upgrade;
-        #break;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        break;
     }
 
     location /api {
         proxy_pass http://browser-backend-dev:5000/;
     }
+
+    location /kibana/ {
+        proxy_pass http://browser-kibana:5601/;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        break;
+    }
+
+
 
     location /elasticsearch/ {
         proxy_pass http://browser-elasticsearch:9200/;
@@ -38,9 +52,9 @@ server {
     }
 
     #  pre-flight request checks
-    #location ~* \.(eot|otf|ttf|woff|woff2)$ {
-    #    add_header Access-Control-Allow-Origin *;
-    #}
+    location ~* \.(eot|otf|ttf|woff|woff2)$ {
+        add_header Access-Control-Allow-Origin *;
+    }
 
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
