--- a/backend/tests/iga/.env-iga
+++ b/backend/tests/iga/.env-iga
@@ -1,10 +1,10 @@
-USER_DATA=tests/iga2/data
+USER_DATA=tests/iga/data
 ES_DATA=/usr/share/elasticsearch/data/extra/iga
 
 GLOSSARY_FILE=glossaire.txt
 EXPRESSION_FILE=expression.txt
 MAPPING_FILE=map.json
-NOM_INDEX=iga2
+NOM_INDEX=iga
 META_FILE=pdf/iga.xlsx
 
 PDF_DIR=pdf
