--- a/backend/tests/igpn/.env-igpn
+++ b/backend/tests/igpn/.env-igpn
@@ -1,15 +1,15 @@
-USER_DATA=/app/tests/iga/data
-ES_DATA=/usr/share/elasticsearch/data/extra/iga
+USER_DATA=/app/tests/igpn/data
+ES_DATA=/usr/share/elasticsearch/data/extra/igpn
 
 GLOSSARY_FILE=glossaire.txt
 RAW_EXPRESSION_FILE=raw_expression.txt
 EXPRESSION_FILE=expression.txt
 MAPPING_FILE=map.json
-INDEX_NAME=iga
-META_FILE=pdf/iga.xlsx
+INDEX_NAME=igpn
 META_DIR=meta
 
 PDF_DIR=pdf
+ODT_DIR=odt
 JSON_DIR=json
 
 ES_PORT=9200
