--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     entrypoint: ./start.sh ${EXEC_ENV}
     environment:
       BACKEND_PORT: ${BACKEND_PORT}
+      ENV_FILE: ${ENV_FILE}
   tika:
     image: logicalspark/docker-tikaserver
     container_name: ${DC_PREFIX}-tika
