WP: attached files need to be upload

--- a/backend/tests/bld/.env-bld
+++ b/backend/tests/bld/.env-bld
@@ -1,8 +1,7 @@
-USER_DATA=/app/tests/bld/data
+USER_DATA=/data/user
 ES_DATA=/usr/share/elasticsearch/data/extra/bld
 GLOSSARY_FILE=glossaire.txt
 RAW_EXPRESSION_FILE=raw_expression.txt
-EXPRESSION_FILE=expression.txt
 MAPPING_FILE=map.json
 INDEX_NAME=bld
 META_DIR=meta
