--- a/backend/tests/iga/.env-iga
+++ b/backend/tests/iga/.env-iga
@@ -1,16 +1,11 @@
-USER_DATA=/app/tests/iga/data
+USER_DATA=/data/user
 ES_DATA=/usr/share/elasticsearch/data/extra/iga
-
 GLOSSARY_FILE=glossaire.txt
 RAW_EXPRESSION_FILE=raw_expression.txt
-EXPRESSION_FILE=expression.txt
 MAPPING_FILE=map.json
 INDEX_NAME=iga
-META_FILE=pdf/iga.xlsx
 META_DIR=meta
-
 DST_DIR=pdf
 JSON_DIR=json
-
 ES_PORT=9200
 ES_HOST=elasticsearch
