--- a/docker-compose-frontend-build.yml
+++ b/docker-compose-frontend-build.yml
@@ -15,6 +15,9 @@ services:
       - http_proxy
       - https_proxy
       - no_proxy
+      - INDEX_NAME
+      - DST_DIR
+      - PJ_DIR
 
 networks:
   default:
