--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,9 @@ python-dotenv==0.12.0
 pytest
 pytest-ordering
 pandas
-elasticsearch===7.0.0,<8.0.0
+elasticsearch>7.0.0,<8.0.0
 tika==1.19
 xlrd
 odfpy==1.4.0
 Unidecode==1.1.1
+sentence-transformers==0.3.8
